# codebase-agent-mcp

./: .gitignore  NOTICE  README.md  pyproject.toml  requirements.txt
codebase_agent/: __init__.py  __main__.py  app_context.py  config.py  io_debug.py  jobs.py  logging_config.py  mcp_stdio_plugin.py  openai_compatible_client.py  plugin_factory.py  prompts.py  server.py  types.py
codebase_agent/built_in_plugins/: local_fs_tools.py  qdrant_client.py
codebase_agent/data/: codebase_agent.config.example.json
codebase_agent/data/integration_to/antigravity/.agents/skills/libraries-analysis-skill/: SKILL.md
codebase_agent/data/integration_to/claude/.claude/agents/: dependencylibraries-list-libraries.md
codebase_agent/data/integration_to/codex/.codex/agents/: dependencylibraries-code-analysis.toml
codebase_agent/data/integration_to/cursor/.cursor/agents/: dependencylibraries-code-analysis.md
codebase_agent/data/integration_to/opencode/.opencode/agents/: dependencylibraries-related-files-search.md
codebase_agent/ensure_qdrant_models/: main.py
codebase_agent/index_dependency_libraries/: main.py
codebase_agent/init/: main.py
codebase_agent/install_skills_to_current_dir/: __init__.py  __main__.py  main.py
codebase_agent/sanitize_library_codebases/: main.py
docs/: main.md
examples/prompts/cengal_based_system_of_apps/: task.md
examples/prompts/cengal_based_system_of_apps/general/: with__codebase_agent__agents.md  with__codebase_agent__tools.md  without__codebase_agent.md  without__codebase_agent__subagents.md
examples/prompts/cengal_based_system_of_apps/opencode/: with__codebase_agent__agents.md  with__codebase_agent__skills.md
integration_to/claude/.claude/agents/: dependencylibraries-code-analysis.md  dependencylibraries-related-files-search.md
integration_to/codex/.codex/agents/: dependencylibraries-list-libraries.toml  dependencylibraries-related-files-search.toml
integration_to/cursor/.cursor/agents/: dependencylibraries-list-libraries.md  dependencylibraries-related-files-search.md
integration_to/general/.agents/skills/libraries-analysis-skill/: SKILL.md
integration_to/opencode/.opencode/agents/: dependencylibraries-code-analysis.md  dependencylibraries-list-libraries.md
integration_to/opencode/.opencode/skills/libraries-analysis-skill/: SKILL.md
integration_to/pi_agent/.pi/skills/libraries-analysis-skill/: SKILL.md
tests/: test_config.py  test_io_debug.py  test_jobs.py  test_mcp_plugins.py  test_prompts.py  test_qdrant_tools.py  test_tools.py
